--- a/html/user/care.html
+++ b/html/user/care.html
@@ -62,10 +62,10 @@
             <li class="layui-nav-item">
                 <a class="fly-nav-avatar" href="javascript:;">
                     <cite class="layui-hide-xs">
-                        <span class="layui-badge-dot"></span>
+                        <!--                        <span class="layui-badge-dot"></span>-->
                     </cite>
-                    <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-
+                    <i class="layui-badge fly-badge-vip layui-bg-blue layui-hide-xs"></i>
+                    <img src="http://148.70.8.85/group1/M00/00/00/rBsAAlyd2OqAfMy_AAAGveq-234459.jpg">
                 </a>
                 <div id="tip-header-wrapper" style="display:none">
                     <span class="layui-badge-dot" style="right: -16px"></span>
@@ -75,8 +75,8 @@
                     <dd>
                         <a href="../user/message.html">
                             <i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的通知
-                            <span class="layui-badge-dot"></span>
-                            <span id="tip-header-notice"  style="display:none">
+                            <!--                            <span class="layui-badge-dot"></span>-->
+                            <span id="tip-header-notice" style="display:none">
                                  <span class="layui-badge-dot"></span>
                             </span>
                         </a>
@@ -163,117 +163,9 @@
                 </div>
                 <div class="layui-tab-item">
                     <ul class="fans-view">
-                        收水电费水电费
                     </ul>
                     <div id="fans_page"></div>
                 </div>
-                <!--                <div class="layui-tab-item">-->
-                <!--                    <div class=" layui-layer-page layui-box layui-layim-chat1"-->
-                <!--                         type="page"-->
-                <!--                         style="z-index: 19891015; width: 790px; top: 129px; left: 65px; min-width: 500px; min-height: 420px; background-image: none; display: block; height: 510px;">-->
-                <!--                        <div class="layui-layer-title" style="cursor: move;">​</div>-->
-                <!--                        <div id="layui-layim-chat" class="layui-layer-content"-->
-                <!--                             style="height: 430px;">-->
-                <!--                            <ul class="layui-unselect layim-chat-list" id="chat-list"-->
-                <!--                                style="height: 510px; display: block;">-->
-                <!--                                <li class="layim-kefu1111111 layim-chatlist-kefu1111111 layim-this"-->
-                <!--                                ><img-->
-                <!--                                        src="//tp1.sinaimg.cn/5619439268/180/40030060651/1"><span>在线客服一</span>-->
-                <!--                                </li>-->
-                <!--                                <li class="layim-kefu2222222 layim-chatlist-kefu2222222"-->
-                <!--                                ><img-->
-                <!--                                        src="//tp1.sinaimg.cn/5619439268/180/40030060651/1"><span>在线客服二</span>-->
-                <!--                                </li>-->
-                <!--                                <li class="layim-kefu2222222 layim-chatlist-kefu2222222"-->
-                <!--                                ><img-->
-                <!--                                        src="//tp1.sinaimg.cn/5619439268/180/40030060651/1"><span>在线客服二</span>-->
-                <!--                                </li>-->
-                <!--                                <li class="layim-kefu2222222 layim-chatlist-kefu2222222"-->
-                <!--                                ><img-->
-                <!--                                        src="//tp1.sinaimg.cn/5619439268/180/40030060651/1"><span>在线客服二</span>-->
-                <!--                                </li>-->
-                <!--                            </ul>-->
-                <!--                            <div class="layim-chat-box" style="margin-left: 200px; ">-->
-                <!--                                <div class="layim-chat layim-chat-kefu layui-show">-->
-                <!--                                    <div class="layui-unselect layim-chat-title">-->
-                <!--                                        <div class="layim-chat-other"><img class="layim-kefu1111111"-->
-                <!--                                                                           src="//tp1.sinaimg.cn/5619439268/180/40030060651/1"><span-->
-                <!--                                                class="layim-chat-username"-->
-                <!--                                        >在线客服一  </span>-->
-                <!--                                            <p class="layim-chat-status"></p></div>-->
-                <!--                                    </div>-->
-                <!--                                    <div class="layim-chat-main" style="height: 252px;">-->
-                <!--                                        <ul>-->
-                <!--                                            <li class="layim-chat-mine">-->
-                <!--                                                <div class="layim-chat-user"><img-->
-                <!--                                                        src="//res.layui.com/images/fly/avatar/00.jpg"><cite><i>2019-04-27-->
-                <!--                                                    14:18:11</i>访客</cite></div>-->
-                <!--                                                <div class="layim-chat-text">奥术大师多</div>-->
-                <!--                                            </li>-->
-                <!--                                            <li class="layim-chat-mine">-->
-                <!--                                                <div class="layim-chat-user"><img-->
-                <!--                                                        src="//res.layui.com/images/fly/avatar/00.jpg"><cite><i>2019-04-27-->
-                <!--                                                    14:31:24</i>访客</cite></div>-->
-                <!--                                                <div class="layim-chat-text">da<br></div>-->
-                <!--                                            </li>-->
-                <!--                                        </ul>-->
-                <!--                                    </div>-->
-                <!--                                    <div class="layim-chat-footer">-->
-                <!--                                        <div class="layedit-tool-face">-->
-                <!--                                            <textarea id="face" style="display: none;"></textarea>-->
-                <!--                                        </div>-->
-                <!--                                        &lt;!&ndash;<div class="layui-unselect layim-chat-tool"&ndash;&gt;-->
-                <!--                                        &lt;!&ndash;data-json="%7B%22name%22%3A%22%E5%9C%A8%E7%BA%BF%E5%AE%A2%E6%9C%8D%E4%B8%80%22%2C%22type%22%3A%22kefu%22%2C%22avatar%22%3A%22%2F%2Ftp1.sinaimg.cn%2F5619439268%2F180%2F40030060651%2F1%22%2C%22id%22%3A1111111%7D">&ndash;&gt;-->
-                <!--                                        &lt;!&ndash;&lt;!&ndash;<span class="layui-icon layim-tool-face" title="选择表情"&ndash;&gt;&ndash;&gt;-->
-                <!--                                        &lt;!&ndash;&lt;!&ndash;&gt;</span>&ndash;&gt;&ndash;&gt;-->
-                <!--                                        &lt;!&ndash;</div>&ndash;&gt;-->
-                <!--                                        &lt;!&ndash; class="layim-chat-textarea"&ndash;&gt;-->
-
-                <!--                                        <div class="layim-chat-bottom">-->
-                <!--                                            <div class="layim-chat-send"><span-->
-                <!--                                                    class="layim-send-btn"-->
-                <!--                                            >发送</span>-->
-                <!--                                            </div>-->
-                <!--                                        </div>-->
-                <!--                                    </div>-->
-                <!--                                </div>-->
-                <!--                                <div class="layim-chat layim-chat-kefu">-->
-                <!--                                    <div class="layui-unselect layim-chat-title">-->
-                <!--                                        <div class="layim-chat-other"><img class="layim-kefu2222222"-->
-                <!--                                                                           src="//tp1.sinaimg.cn/5619439268/180/40030060651/1"><span-->
-                <!--                                                class="layim-chat-username"-->
-                <!--                                        >在线客服二  </span>-->
-                <!--                                            <p class="layim-chat-status"></p></div>-->
-                <!--                                    </div>-->
-                <!--                                    <div class="layim-chat-main" style="height: 252px;">-->
-                <!--                                        <ul></ul>-->
-                <!--                                    </div>-->
-                <!--                                    <div class="layim-chat-footer">-->
-                <!--                                        <div class="layui-unselect layim-chat-tool"-->
-                <!--                                             data-json="%7B%22name%22%3A%22%E5%9C%A8%E7%BA%BF%E5%AE%A2%E6%9C%8D%E4%BA%8C%22%2C%22type%22%3A%22kefu%22%2C%22avatar%22%3A%22%2F%2Ftp1.sinaimg.cn%2F5619439268%2F180%2F40030060651%2F1%22%2C%22id%22%3A2222222%7D">-->
-                <!--                                            <span class="layui-icon layim-tool-face" title="选择表情"-->
-                <!--                                            ></span></div>-->
-                <!--                                        <div class="layim-chat-textarea"><textarea></textarea></div>-->
-                <!--                                        <div class="layim-chat-bottom">-->
-                <!--                                            <div class="layim-chat-send"><span-->
-                <!--                                                    class="layim-send-btn"-->
-                <!--                                            >发送</span><span-->
-                <!--                                                    class="layim-send-set"-->
-                <!--                                                    lay-type="show"><em-->
-                <!--                                                    class="layui-edge"></em></span>-->
-                <!--                                            </div>-->
-                <!--                                        </div>-->
-                <!--                                    </div>-->
-                <!--                                </div>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                        <span class="layui-layer-setwin">-->
-                <!--                            <a class="read_msg"-->
-                <!--                               href="javascript:;">-->
-                <!--                                <cite>全部标记为已读</cite></a>-->
-                <!--                        </span>-->
-                <!--                    </div>-->
-                <!--                </div>-->
             </div>
         </div>
     </div>
@@ -325,6 +217,9 @@
         // 填充关注列表数据
         function careFullTable(res) {
             $('.mine-view').empty();
+            if (res.body.data.records.length === 0) {
+                $('.mine-view').append('<div class="fly-none">您暂时没有关注信息</li>');
+            }
             $.each(res.body.data.records, function (index, val) {
                 let liItem = $('<li class="item_cont"> </li>');
                 let a1Item = $("<a></a>").attr('href', 'home.html?userId=' + val.userId);
@@ -369,80 +264,61 @@
         // 关注分页处理
         function carePage(url, curr, size) {
             let current = curr || 1;
-            $.ajax({
-                url: layui.baseUrl() + url,
-                type: 'get',
-                data: {
-                    current: current,
-                    size: size
-                },
-                dataType: 'json',
-                headers: {
-                    Authorization: localStorage.getItem('token')
-                },
-                success(res) {
-                    // 拼接数据
-                    careFullTable(res);
+            fly.json(url, {
+                current: current,
+                size: size
+            }, function (res) {
+                // 拼接数据
+                careFullTable(res);
 
-                    if (res.body.data.pages <= 1) {
-                        return;
-                    }
-                    // 设置分页
-                    laypage.render({
-                        elem: 'care_page'
-                        , count: res.body.data.total //数据总数
-                        , limit: res.body.data.size //每页显示的条数
-                        , curr: res.body.data.current // 当前页
-                        , jump: function (obj, first) {
-                            console.log(obj);
-                            if (!first) {
-                                carePage(url, obj.curr, obj.limit)
-                            }
-                        }
-                    });
+                if (res.body.data.pages <= 1) {
+                    return;
                 }
-
-            });
+                // 设置分页
+                laypage.render({
+                    elem: 'care_page'
+                    , count: res.body.data.total //数据总数
+                    , limit: res.body.data.size //每页显示的条数
+                    , curr: res.body.data.current // 当前页
+                    , jump: function (obj, first) {
+                        console.log(obj);
+                        if (!first) {
+                            carePage(url, obj.curr, obj.limit)
+                        }
+                    }
+                });
+            }, {type: 'get'});
         }
 
         // 粉丝分页处理
         function fansPage(url, cur, size) {
-            $.ajax({
-                url: layui.baseUrl() + url,
-                type: 'get',
-                data: {
-                    current: cur,
-                    size: size
-                },
-                dataType: 'json',
-                headers: {
-                    Authorization: localStorage.getItem('token')
-                },
-                success(res) {
-                    console.log(res)
-                    // 拼接数据
-                    fansFullTable(res);
+            fly.json(url, {
+                current: cur,
+                size: size
+            }, function (res) {
+                console.log(res)
+                // 拼接数据
+                fansFullTable(res);
 
-                    if (res.body.data.pages <= 1) {
-                        return;
-                    }
-                    // 设置分页
-                    laypage.render({
-                        elem: 'fans_page'
-                        , count: res.body.data.total //数据总数
-                        , limit: res.body.data.size //每页显示的条数
-                        , curr: res.body.data.current // 当前页
-                        , jump: function (obj, first) {
-                            console.log(obj);
-                            if (!first) {
-                                carePage(url, obj.curr, obj.limit)
-                            }
-                        }
-                    });
+                if (res.body.data.pages <= 1) {
+                    return;
                 }
-
-            });
+                // 设置分页
+                laypage.render({
+                    elem: 'fans_page'
+                    , count: res.body.data.total //数据总数
+                    , limit: res.body.data.size //每页显示的条数
+                    , curr: res.body.data.current // 当前页
+                    , jump: function (obj, first) {
+                        console.log(obj);
+                        if (!first) {
+                            carePage(url, obj.curr, obj.limit)
+                        }
+                    }
+                });
+            }, {type: 'get'})
         }
+
         // 点击取消关注
         $('.fans-view').on('click', '.item_cont a.layui-btn-primary', function () {
             let careId = $(this).attr('value');
@@ -463,21 +339,24 @@
                 carePage('/Interaction/careInfoPage', 1, 10);
             })
         }
-        function fansFullTable(res){
-            console.log(res)
+
+        function fansFullTable(res) {
             $('.fans-view').empty();
+            if (res.body.data.records.length === 0) {
+                $('.fans-view').append('<div class="fly-none">您暂时没有粉丝信息</li>');
+            }
             $.each(res.body.data.records, function (index, val) {
                 let liItem = $('<li class="item_cont"> </li>');
                 let a1Item = $("<a></a>").attr('href', 'home.html?userId=' + val.userId);
                 let imgItem = $("<img class='header'>").attr('src', layui.imgUrl() + val.avatar);
                 a1Item.append(imgItem);
                 let a2Item = $('<a class="nick"></a>').attr('href', 'home.html?userId=' + val.userId).text(val.username);
-                let a3Item=null;
-                if(val.eachCare > 0 ){
-                    a3Item= $('<a class="layui-btn layui-btn-primary"></a>')
+                let a3Item = null;
+                if (val.eachCare > 0) {
+                    a3Item = $('<a class="layui-btn layui-btn-primary"></a>')
                         .text('取消关注').attr('value', val.userId);
-                }else{
-                    a3Item= $('<a class="layui-btn layui-btn-normal"></a>')
+                } else {
+                    a3Item = $('<a class="layui-btn layui-btn-normal"></a>')
                         .text('关注').attr('value', val.userId);
                 }
 
