--- a/html/user/forget.html
+++ b/html/user/forget.html
@@ -1,125 +1,91 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>找回密码/重置密码</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="keywords" content="fly,layui,前端社区">
-  <meta name="description" content="Fly社区是模块化前端UI框架Layui的官网社区，致力于为web开发提供强劲动力">
-  <link rel="stylesheet" href="../../res/layui/css/layui.css">
-  <link rel="stylesheet" href="../../res/css/global.css">
+    <meta charset="utf-8">
+    <title>找回密码/重置密码</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="keywords" content="达达问答">
+    <meta name="description" content="达达数据结构专业问答">
+    <link rel="stylesheet" href="../../res/layui/css/layui.css">
+    <link rel="stylesheet" href="../../res/css/global.css">
 </head>
 <body>
 
 <div class="fly-header layui-bg-black">
-  <div class="layui-container">
-      <a class="fly-logo" href="../index.html">
-          <img width="180" src="../../res/images/fao.png" alt="达达问答">
-      </a>
-      <ul class="layui-nav fly-nav-user">
-          <!-- 登入后的状态 -->
-          <li class="layui-nav-item">
-              <a class="fly-nav-avatar" href="javascript:;">
-                  <cite class="layui-hide-xs"></cite>
-                  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-              </a>
-              <dl class="layui-nav-child">
-                  <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
-                  <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
-                                                        style="top: 4px;"></i>我的消息</a></dd>
-                  <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
-                  </dd>
-                  <hr style="margin: 5px 0;">
-                  <dd><a href="" style="text-align: center;">退出</a></dd>
-              </dl>
-          </li>
-      </ul>
-  </div>
+    <div class="layui-container">
+        <a class="fly-logo" href="../index.html">
+            <img width="180" src="../../res/images/fao.png" alt="达达问答">
+        </a>
+        <ul class="layui-nav fly-nav-user">
+            <!-- 登入后的状态 -->
+            <!-- 未登入的状态 -->
+            <li class="layui-nav-item">
+                <a class="iconfont icon-touxiang layui-hide-xs" href="login.html"></a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="login.html">登入</a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="reg.html">注册</a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <div class="layui-container fly-marginTop">
-  <div class="fly-panel fly-panel-user" pad20>
-    <div class="layui-tab layui-tab-brief" lay-filter="user">
-      <ul class="layui-tab-title">
-        <li><a href="login.html">登入</a></li>
-        <li class="layui-this">找回密码<!--重置密码--></li>
-      </ul>
-      <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
-        <div class="layui-tab-item layui-show">
-          <!-- 重置密码 -->
-          <!--
-          <div class="fly-msg">{{d.username}}，请重置您的密码</div>
-          <div class="layui-form layui-form-pane"  style="margin-top: 30px;">
-            <form action="/user/repass" method="post">
-              <div class="layui-form-item">
-                <label for="L_pass" class="layui-form-label">密码</label>
-                <div class="layui-input-inline">
-                  <input type="password" id="L_pass" name="pass" required lay-verify="required" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">6到16个字符</div>
-              </div>
-              <div class="layui-form-item">
-                <label for="L_repass" class="layui-form-label">确认密码</label>
-                <div class="layui-input-inline">
-                  <input type="password" id="L_repass" name="repass" required lay-verify="required" autocomplete="off" class="layui-input">
-                </div>
-              </div>
-              <div class="layui-form-item">
-                <label for="L_vercode" class="layui-form-label">人类验证</label>
-                <div class="layui-input-inline">
-                  <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请回答后面的问题" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid">
-                  <span style="color: #c00;">{{d.vercode}}</span>
-                </div>
-              </div>
-              <div class="layui-form-item">
-                <input type="hidden" name="username" value="{{d.username}}">
-                <input type="hidden" name="email" value="{{d.email}}">
-                <button class="layui-btn" alert="1" lay-filter="*" lay-submit>提交</button>
-              </div>
-            </form>
-          </div>
+    <div class="fly-panel fly-panel-user" pad20>
+        <div class="layui-tab layui-tab-brief" lay-filter="user">
+            <ul class="layui-tab-title">
+                <li><a href="login.html">登入</a></li>
+                <li class="layui-this">找回密码<!--重置密码--></li>
+            </ul>
+            <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
+                <div class="layui-tab-item layui-show">
 
-
-          <div class="fly-error">该重置密码链接已失效，请重新校验您的信息</div>
-          <div class="fly-error">非法链接，请重新校验您的信息</div>
-          -->
-
-          <div class="layui-form layui-form-pane">
-            <form method="post">
-                <div class="layui-form-item">
-                    <label for="L_phone" class="layui-form-label">手机</label>
-                    <div class="layui-input-inline">
-                        <input type="text" id="L_phone" name="telephone" required
-                               lay-verify="phone" autocomplete="off"
-                               class="layui-input">
+                    <div class="layui-form layui-form-pane">
+                        <form method="post" action="/userAccount/change/password">
+                            <div class="layui-form-item">
+                                <label for="L_phone" class="layui-form-label">手机</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" id="L_phone" name="telephone" required
+                                           lay-verify="phone" autocomplete="off"
+                                           class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <label for="L_vercode" class="layui-form-label">验证码</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" id="L_vercode" name="code" required=""
+                                           lay-verify="required" placeholder="请输入手机短信验证码"
+                                           autocomplete="off" class="layui-input">
+                                </div>
+                                <div class="layui-form-mid" id="vercode-wrapper"
+                                     style="padding: 0!important;">
+                                    <button type="button" class="layui-btn layui-btn-normal"
+                                            id="FLY-getvercode">获取验证码
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <label for="L_pass" class="layui-form-label">新密码</label>
+                                <div class="layui-input-inline">
+                                    <input type="password" id="L_pass" name="newPassword" required
+                                           lay-verify="pass" autocomplete="off"
+                                           class="layui-input">
+                                </div>
+                                <div class="layui-form-mid layui-word-aux">6到12个字符</div>
+                            </div>
+                            <div class="layui-form-item">
+                                <button class="layui-btn" lay-filter="forget" lay-submit>提交
+                                </button>
+                            </div>
+                        </form>
                     </div>
-                </div>
-                <div class="layui-form-item">
-                    <label for="L_vercode" class="layui-form-label">验证码</label>
-                    <div class="layui-input-inline">
-                        <input type="text" id="L_vercode" name="code" required=""
-                               lay-verify="required" placeholder="请输入手机短信验证码"
-                               autocomplete="off" class="layui-input">
-                    </div>
-                    <div class="layui-form-mid" style="padding: 0!important;">
-                        <button type="button" class="layui-btn layui-btn-normal"
-                                id="FLY-getvercode">获取验证码
-                        </button>
-                    </div>
-                </div>
-              <div class="layui-form-item">
-                <button class="layui-btn" alert="1" lay-filter="*" lay-submit>提交</button>
-              </div>
-            </form>
-          </div>
 
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
 
 </div>
@@ -128,22 +94,84 @@
     <p><a href="#" target="_blank">达达问答</a> 2019 &copy; <a
             href="#" target="_blank">dada.com 出品</a></p>
 </div>
-<script src="../../res/layui/layui.js"></script>
+<script src="../../layui/layui.all.js"></script>
 <script>
-layui.cache.page = 'user';
-layui.cache.user = {
-  username: '游客'
-  ,uid: -1
-  ,avatar: '../../res/images/avatar/00.jpg'
-  ,experience: 83
-  ,sex: '男'
-};
-layui.config({
-  version: "3.0.0"
-  ,base: '../../res/mods/'
-}).extend({
-  fly: 'index'
-}).use('fly');
+    layui.cache.page = 'user';
+    layui.cache.user = {
+        username: '游客'
+        , uid: -1
+        , avatar: '../../res/images/avatar/00.jpg'
+        , experience: 83
+        , sex: '男'
+    };
+    layui.config({
+        version: "3.0.0"
+        , base: '../../res/mods/'
+    }).extend({
+        fly: 'index'
+    }).use('fly', function () {
+        let $ = layui.jquery;
+        let form = layui.form;
+        let fly = layui.fly;
+
+        form.verify({
+            pass: [
+                /^[\S]{6,12}$/
+                , '密码必须6到12位'
+            ],
+            repass: function (value) {
+                let repassValue = $('#L_pass').val();
+                if (value != repassValue) {
+                    return '两次输入的密码不一致!'
+                }
+            }
+        });
+        // 获取验证码
+        let sendActive = false;
+        $('#FLY-getvercode').on('click', function () {
+            if (sendActive) {
+                return;
+            }
+
+            let valid_rule = /^(13[0-9]|14[5-9]|15[012356789]|166|17[0-8]|18[0-9]|19[8-9])[0-9]{8}$/;// 手机号码校验规则
+            let myPhone = $('#L_phone').val().trim();
+            if (!valid_rule.test(myPhone)) {
+                layer.msg("手机号码格式有误!", {icon: 2});
+                return
+            }
+            sendActive = true;
+            countDown()
+            fly.json('/userAccount/code', {
+                phone: myPhone
+            }, function (res) {
+                layer.msg("验证码发送成功请注意查收!", {icon: 1})
+            })
+        });
+        // 计数器
+        let totalTime = 60;
+        function countDown() {
+            let html = $('<div class="layui-form-mid layui-word-aux"></div>');
+            html.text(totalTime + 's后重新发送');
+            console.log(html)
+            let codeWrppaer = $('#vercode-wrapper');
+            let clock = window.setInterval(() => {
+                codeWrppaer.empty();
+                codeWrppaer.append(html);
+                totalTime--;
+                html.text(totalTime + 's后重新发送');
+                if (totalTime < 0) {
+                    window.clearInterval(clock)
+                    codeWrppaer.empty();
+                    codeWrppaer.append(' <button type="button" class="layui-btn layui-btn-normal"\n' +
+                        '                    id="FLY-getvercode">获取验证码\n' +
+                        '                        </button>');
+                    totalTime = 60;
+                    sendActive = false
+                }
+            }, 1000)
+        }
+
+    });
 </script>
 
 </body>
