--- a/html/jie/add.html
+++ b/html/jie/add.html
@@ -23,10 +23,10 @@
             <li class="layui-nav-item">
                 <a class="fly-nav-avatar" href="javascript:;">
                     <cite class="layui-hide-xs">
-                        <span class="layui-badge-dot"></span>
+                        <!--                        <span class="layui-badge-dot"></span>-->
                     </cite>
-                    <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-
+                    <i class="layui-badge fly-badge-vip layui-bg-blue layui-hide-xs"></i>
+                    <img src="http://148.70.8.85/group1/M00/00/00/rBsAAlyd2OqAfMy_AAAGveq-234459.jpg">
                 </a>
                 <div id="tip-header-wrapper" style="display:none">
                     <span class="layui-badge-dot" style="right: -16px"></span>
@@ -36,7 +36,7 @@
                     <dd>
                         <a href="../user/message.html">
                             <i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的通知
-                            <span class="layui-badge-dot"></span>
+                            <!--                            <span class="layui-badge-dot"></span>-->
                             <span id="tip-header-notice" style="display:none">
                                  <span class="layui-badge-dot"></span>
                             </span>
@@ -46,7 +46,9 @@
                                                        style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
-                    <dd><a href="" style="text-align: center;">退出</a></dd>
+                    <dd>
+                        <a href="javascript:void(0);" id="tuichu" style="text-align: center;">退出</a>
+                    </dd>
                 </dl>
             </li>
         </ul>
@@ -71,26 +73,10 @@
                                         <select lay-verify="required" name="category"
                                                 id="reason-select"
                                                 lay-filter="column">
-                                            <!--                                            <option></option>-->
-                                            <!--                                            <option value="0">数据结构概述</option>-->
-                                            <!--                                            <option value="99">线性表</option>-->
-                                            <!--                                            <option value="100">栈和队列</option>-->
-                                            <!--                                            <option value="101">字符串</option>-->
-                                            <!--                                            <option value="168">树</option>-->
-                                            <!--                                            <option value="169">图</option>-->
-                                            <!--                                            <option value="169">算法</option>-->
                                         </select>
                                     </div>
                                 </div>
-                                <!--                                <div class="layui-col-md9">-->
-                                <!--                                    <label for="L_title" class="layui-form-label">标题</label>-->
-                                <!--                                    <div class="layui-input-block">-->
-                                <!--                                        <input type="text" id="L_title" name="title" required-->
-                                <!--                                               lay-verify="required" autocomplete="off"-->
-                                <!--                                               class="layui-input">-->
-                                <!--                                        &lt;!&ndash; <input type="hidden" name="id" value="{{d.edit.id}}"> &ndash;&gt;-->
-                                <!--                                    </div>-->
-                                <!--                                </div>-->
+
                             </div>
                             <div class="layui-form-item layui-form-text">
                                 <div class="layui-input-block">
@@ -101,15 +87,7 @@
                             </div>
                             <input type="hidden" name="open" value="3">
                             <div class="layui-form-item">
-                                <!--                                <label for="L_vercode" class="layui-form-label">验证码</label>-->
-                                <!--                                <div class="layui-input-inline">-->
-                                <!--                                    <input type="text" id="L_vercode" name="vercode" required-->
-                                <!--                                           lay-verify="required" placeholder="请输入验证码"-->
-                                <!--                                           autocomplete="off" class="layui-input">-->
-                                <!--                                </div>-->
-                                <!--                                <div class="layui-form-mid">-->
-                                <!--                                    <span style="color: #c00;">1+1=?</span>-->
-                                <!--                                </div>-->
+
                             </div>
                             <div class="layui-form-item">
                                 <button class="layui-btn" lay-filter="problem" lay-submit>立即发布
