--- a/html/user/reg.html
+++ b/html/user/reg.html
@@ -5,7 +5,7 @@
     <title>注册</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="达达问答">
-    <meta name="description" content="达达达数据结构专业问答">
+    <meta name="description" content="达达数据结构专业问答">
     <link rel="stylesheet" href="../../res/layui/css/layui.css">
     <link rel="stylesheet" href="../../res/css/global.css">
 </head>
@@ -68,7 +68,7 @@
                                            lay-verify="pass" autocomplete="off"
                                            class="layui-input">
                                 </div>
-                                <div class="layui-form-mid layui-word-aux">6到16个字符</div>
+                                <div class="layui-form-mid layui-word-aux">6到12个字符</div>
                             </div>
                             <div class="layui-form-item">
                                 <label for="L_repass" class="layui-form-label">确认密码</label>
@@ -124,16 +124,15 @@
         , base: '../../res/mods/'
     }).extend({
         fly: 'index'
-    }).use(['fly'], function () {
+    }).use(('fly'), function () {
         let $ = layui.jquery;
         let form = layui.form;
         let fly = layui.fly;
-        console.log(form);
         $("ul.layui-fixbar").css("display", "none");
         form.verify({
             pass: [
                 /^[\S]{6,12}$/
-                , '密码必须6到12位，且不能出现空格'
+                , '密码必须6到12位'
             ],
             repass: function (value) {
                 let repassValue = $('#L_pass').val();
@@ -146,16 +145,16 @@
         // 获取验证码
         let sendActive = false;
         $('#FLY-getvercode').on('click', function () {
-            if (sendActive) {
-                return;
-            }
-            sendActive = true;
             let valid_rule = /^(13[0-9]|14[5-9]|15[012356789]|166|17[0-8]|18[0-9]|19[8-9])[0-9]{8}$/;// 手机号码校验规则
             let myPhone = $('#L_phone').val().trim();
             if (!valid_rule.test(myPhone)) {
                 layer.msg("手机号码格式有误!", {icon: 2});
                 return
             }
+            if (sendActive) {
+                return;
+            }
+            sendActive = true;
             countDown()
             fly.json('/userAccount/code', {
                 phone: myPhone
@@ -188,11 +187,6 @@
         }
 
     });
-
-    // layui.use(['layer'], function () {
-    //     let $ = layui.jquery;
-    //     $("ul.layui-fixbar").css("display", "none")
-    // })
 
 </script>
 
